2004-07-19  Bastien Nocera  <hadess@hadess.net>

	* NEWS:
	* README: upd
	* src/totem.c: make Shift+Left arrow go back 5 seconds, not 15
	(just the left arrow already does 15 seconds)

2004-07-11  Bastien Nocera  <hadess@hadess.net>

	* src/totem.c: (on_window_key_press_event): Make Eject keyboard
	shortcuts work when Controls are hidden (Closes: #147267)

2004-07-08  Bastien Nocera  <hadess@hadess.net>

	* src/Makefile.am:
	* src/dvd_plus_rw_utils.cpp: update from n-c-b, fixes compilation
	on Solaris (Closes: #145550)

2004-07-06  Bastien Nocera  <hadess@hadess.net>

	* src/totem-playlist.c: (totem_playlist_add_files):
	s/Select Files/Select Movies or Playlists/ (Closes: #145415)

2004-07-06  Bastien Nocera  <hadess@hadess.net>

	* src/totem-pl-parser.c: (totem_pl_parser_write): better error message
	when the playlist can't be written
	* src/totem-playlist.c: (totem_playlist_save_files): don't use
	g_file_test() on a URI, it doesn't work (Closes: #145419)

2004-07-06  Bastien Nocera  <hadess@hadess.net>

	* data/schemas.sh: actually use the size option of the thumbnailer

2004-07-04  Bastien Nocera  <hadess@hadess.net>

	* src/totem.c: (totem_action_handle_key): Space in full-screen mode
	now acts as play/pause

2004-07-04  Bastien Nocera  <hadess@hadess.net>

	* src/totem-video-thumbnailer.c: (add_holes_to_pixbuf_large),
	(save_pixbuf): better look and size for the large thumbnails, less
	wasted space

2004-07-04  Bastien Nocera  <hadess@hadess.net>

	* data/Makefile.am:
	* data/filmholes-big-left.png:
	* data/filmholes-big-right.png:
	* src/totem-video-thumbnailer.c: (print_usage),
	(add_holes_to_pixbuf_small), (add_holes_to_pixbuf_large),
	(save_pixbuf), (main): added better holes for bigger thumbnail sizes,
	add an option to the thumnailer for bigger sizes

2004-07-04  Bastien Nocera  <hadess@hadess.net>

	* src/bacon-video-widget-properties.c:
	(bacon_video_widget_properties_set_from_current):
	* src/totem-private.h: