@@ -5,7 +5,11 @@
 
 #include <sys/time.h>
 
+#ifdef G_HAVE_ISO_VARARGS
+#define D(...) g_message (__VA_ARGS__)
+#else
 #define D(x...) g_message (x)
+#endif
 #define TE() { g_message ("enter %s", __PRETTY_FUNCTION__ ); gdk_threads_enter (); }
 #define TL() { g_message ("leave %s", __PRETTY_FUNCTION__); gdk_threads_leave (); }
 #define TOTEM_PROFILE(function)     \
@@ -21,7 +25,11 @@
 	     __PRETTY_FUNCTION__, __LINE__, dtime ); \
     }while(0)
 #else
+#ifdef G_HAVE_ISO_VARARGS
+#define D(...)
+#else
 #define D(x...)
+#endif
 #define TE() { gdk_threads_enter (); }
 #define TL() { gdk_threads_leave (); }
 #define TOTEM_PROFILE(function) function
