@@ -1,5 +1,10 @@
 2004-07-19  Bastien Nocera  <hadess@hadess.net>
 
+	* src/debug.h: fix compilation on Solaris (patch from Brian Cameron
+	<rian.cameron@sun.com>) (Closes: #147739)
+
+2004-07-19  Bastien Nocera  <hadess@hadess.net>
+
 	* NEWS:
 	* README: upd
 	* src/totem.c: make Shift+Left arrow go back 5 seconds, not 15
